--- a/subprojects/gradle-ui/ui.gradle
+++ b/subprojects/gradle-ui/ui.gradle
@@ -20,14 +20,13 @@ dependencies {
 
 task integTest(type: AntTest, dependsOn: [ rootProject.intTestImage ]) {
     options.fork(jvmArgs: ["-ea"])
-    options.systemProperties['integTest.gradleHomeDir'] = integTestDistDir.absolutePath
+    options.systemProperties['integTest.gradleHomeDir'] = rootProject.intTestImage.integTestDistDir.absolutePath
     options.systemProperties['integTest.srcDir'] = file('src').absolutePath
-    options.systemProperties['integTest.gradleUserHomeDir'] = integTestUserDir.absolutePath
-
+    options.systemProperties['integTest.gradleUserHomeDir'] = rootProject.integTest.integTestUserDir.absolutePath
     include 'org/gradle/integtests/**/*IntegrationTest.*'
-}
 
-integTest.doFirst { task -> task.options.systemProperties['integTest.gradleHomeDir'] = integTestGradleHome.absolutePath }
+    doFirst { task -> task.options.systemProperties['integTest.gradleHomeDir'] = rootProject.intTestImage.integTestGradleHome.absolutePath }
+}
 
 compileJava.options.depend()
 
