--- a/subprojects/gradle-docs/docs.gradle
+++ b/subprojects/gradle-docs/docs.gradle
@@ -337,7 +337,7 @@ class RemoteLocations {
     }
 
     String getDocsRemoteDir() {
-        version.isRelease() ? version.toString() : 'latest'
+        (version.isRelease() ? version.toString() : 'latest') + '/docs'
     }
 
     String getJavadocUrl() {
