--- a/subprojects/gradle-docs/src/samples/pomGeneration/build.gradle
+++ b/subprojects/gradle-docs/src/samples/pomGeneration/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 
 task javadocZip(type: Zip, dependsOn: javadoc) {
     classifier = 'javadoc'
-    fileSet(dir: javadoc.destinationDir)
+    from javadoc.destinationDir
 }
 
 artifacts {
