--- a/subprojects/gradle-core/core.gradle
+++ b/subprojects/gradle-core/core.gradle
@@ -43,6 +43,7 @@ dependencies {
             "commons-lang:commons-lang:2.3@jar",
             "commons-codec:commons-codec:1.2@jar",
             "commons-collections:commons-collections:3.2.1@jar",
+            "org.apache.commons:commons-compress:1.0@jar",
             "slide:webdavlib:2.0@jar",
             "biz.aQute:bndlib:0.0.255@jar",
             "org.apache.maven:maven-ant-tasks:2.0.9@jar",
