--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/zipWithArguments/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/zipWithArguments/build.gradle
@@ -5,7 +5,7 @@ version = 1.0
 task myZip(type: Zip) {
     appendix = 'wrapper'
     classifier = 'src'
-    fileSet(dir: 'somedir')
+    from 'somedir'
 }
 
 println myZip.archiveName
