--- a/subprojects/gradle-docs/src/samples/webApplication/customised/build.gradle
+++ b/subprojects/gradle-docs/src/samples/webApplication/customised/build.gradle
@@ -25,10 +25,10 @@ dependencies {
 }
 
 war {
-    fileSet(dir: file('src/rootContent')) // adds a file-set to the root of the archive
-    webInf(dir: file('src/additionalWebInf')) // adds a file-set to the WEB-INF dir.
-    additionalLibs(dir: file('additionalLibs')) // adds a file-set to the WEB-INF/lib dir.
-    libConfigurations('moreLibs') // adds a configuration to the WEB-INF/lib dir.
+    from 'src/rootContent' // adds a file-set to the root of the archive
+    webInf { from 'src/additionalWebInf' } // adds a file-set to the WEB-INF dir.
+    classpath fileTree('additionalLibs') // adds a file-set to the WEB-INF/lib dir.
+    classpath configurations.moreLibs // adds a configuration to the WEB-INF/lib dir.
     webXml = file('src/someWeb.xml') // copies a file to WEB-INF/web.xml
 }
 
