GRADLE-679 - Merged AbstractArchiveTask.customName into archiveName. - Ported AbstractArchiveTask from groovy to java

--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/archiveContent/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/archiveContent/build.gradle
@@ -27,7 +27,7 @@ task zipWithZipFileSet(type: Zip) {
 
 // START SNIPPET tar-file-set
 task tarWithFileSet(type: Tar) {
-    tarFileSet(dir: 'contentDir') {
+    from('contentDir') {
         include('**/*.txt')
         exclude('**/*.gif')
         uid = 'myuid'
