--- a/subprojects/gradle-docs/src/samples/webApplication/customised/build.gradle
+++ b/subprojects/gradle-docs/src/samples/webApplication/customised/build.gradle
@@ -16,8 +16,14 @@ repositories {
 }
 
 dependencies {
-    compile ":compile:1.0"
-    providedCompile ":providedCompile:1.0@jar", "javax.servlet:servlet-api:2.5"
+    compile module(":compile:1.0") {
+        dependency ":compile-transitive-1.0@jar"
+        dependency ":providedCompile-transitive:1.0@jar"
+    }
+    providedCompile "javax.servlet:servlet-api:2.5"
+    providedCompile module(":providedCompile:1.0") {
+        dependency ":providedCompile-transitive:1.0@jar"
+    }
     runtime ":runtime:1.0"
     providedRuntime ":providedRuntime:1.0@jar"
     testCompile "junit:junit:3.8.2"
